# django-remote-finder

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.py
.github/workflows/: test.yml
remote_finder/: __init__.py
tests/: test_finder.py
