[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-remote-finder"
version = "0.5"
dependencies = [
  "django>4.2",
]
requires-python = ">= 3.9"
authors = [
  {name = "Jim Garrison"},
]
maintainers = [
  {name = "Claude Paroz", email = "claude@2xlibre.net"},
]
description = "Keep various JavaScript/CSS libraries updated within a Django package"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/claudep/django-remote-finder"
